- Fixed spacing on radios/checkbox

--- a/sass/controls/_input.scss
+++ b/sass/controls/_input.scss
@@ -5,7 +5,7 @@
 .field .checkbox-label,
 .field .checkbox > label {
   display: block;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
   margin-left: -5px;
   margin-top: 3px;
 }
@@ -14,7 +14,6 @@
 .field > textarea {
   margin-bottom: 20px;
 }
-
 
 // Two Connected Fields
 .compound-field > .field,
