--- a/sass/controls/_radios.scss
+++ b/sass/controls/_radios.scss
@@ -13,7 +13,7 @@
 .radio:not(:checked) + label,
 .radio:checked + label {
   cursor: pointer;
-  margin-bottom: 12px;
+  margin-bottom: 9px;
   margin-top: 4px;
   padding-left: 35px;
   position: relative;
