--- a/sass/dark-theme.scss
+++ b/sass/dark-theme.scss
@@ -284,6 +284,7 @@ $datagrid-header-bg-color: $slate05;
 $datagrid-header-border-color: $slate06;
 $datagrid-header-hover-color: $slate04;
 $datagrid-header-active-color: $slate04;
+$datagrid-cell-color: #ffffff;
 $datagrid-cell-bg-color: $slate07;
 $datagrid-cell-readonly-bg-color: $slate08;
 $datagrid-cell-readonly-color: $slate02;
